<resources>
    <string name="app_name">Symon</string>

    <string name="defaultFont">fonts/Montserrat-Regular.ttf</string>

    <string name="general_internet_connection_unavailable">Ops! Por favor, verifique sua conexão à internet e tente novamente.</string>
    <string name="general_server_error">Ops! Ocorreu um erro. Por favor, tente novamente.</string>
    <string name="general_continue">Continuar</string>
    <string name="general_enter">Entrar</string>
    <string name="general_email">E-mail</string>
    <string name="general_save">Salvar</string>
    <string name="general_logout">Sair</string>
    <string name="general_continue_lower_case">Continuar</string>
    <string name="general_required_field">Campo obrigatório</string>
    <string name="general_permissions_message">Por favor libere as permissões de acesso ;)</string>
    <string name="general_password_hint">Digite sua senha</string>
    <string name="general_cancel">Cancelar</string>

    <string name="fb_login_protocol_scheme">fb1548485508507561</string>
    <string name="facebook_app_id">1548485508507561</string>
    <string name="facebook_permissions">/me/permissions/</string>
    <string name="facebook_permission_profile">public_profile</string>
    <string name="facebook_permission_email">email</string>
    <string name="facebook_email">email</string>
    <string name="facebook_name">name</string>
    <string name="facebook_error_message">Ocorreu um erro ao tentar entrar com o Facebook =/</string>

    <string name="tab_promo">Ofertas</string>
    <string name="tab_rating">Avaliações</string>
    <string name="tab_send">Enviar</string>
    <string name="tab_notifications">Notificações</string>
    <string name="tab_profile">Perfil</string>

    <string name="login_hint">Seu e-mail</string>
    <string name="login_password_hint">Digite sua senha</string>
    <string name="login_register_now">Cadastre-se agora</string>
    <string name="login_register_email">E-mail de cadastro</string>
    <string name="login_register_new_label">Novo por aqui?</string>
    <string name="login_password_title_label">Agora, sua senha</string>
    <string name="login_forget_password">Esqueceu sua senha?</string>
    <string name="login_confirm_login">Confirmar login</string>
    <string name="login_confirm_action">Login realizado!\nConsulte e publique ofertas ;)</string>
    <string name="login_invalid_message">usuário ou senha incorretos</string>
    <string name="login_email_invalid_msg">E-mail inválido</string>
    <string name="login_confirm_action_login">Login realizado!\nConsulte e publique ofertas ;)</string>

    <string name="register_title_label">Cadastre-se</string>
    <string name="register_password_hint">Defina uma senha</string>
    <string name="register_complement_name_hint">Nome completo</string>
    <string name="register_complement_birthday_hint">Data de nascimento</string>
    <string name="register_complement_phone_hint">Telefone com DDD</string>
    <string name="register_complement_title_label">Completar perfil</string>
    <string name="register_complement_phone_mask">(##) # #### ####</string>
    <string name="register_now">Cadastre-se agora</string>
    <string name="register_email">E-mail de cadastro</string>
    <string name="register_new_label">Novo por aqui?</string>
    <string name="register_login_password_title_label">Agora, sua senha</string>
    <string name="register_forget_password">Esqueceu sua senha?</string>
    <string name="register_confirm_login">Confirmar login</string>
    <string name="register_email_invalid_msg">E-mail invalido</string>

    <string name="confirm_action_login">Login realizado!\nConsulte e publique ofertas ;)</string>

    <string name="welcome_facebook_button">Entre com o Facebook</string>
    <string name="welcome_title">Bem-vindo(a) ao</string>
    <string name="welcome_message">Compartilhe\ne consulte ofertas reais</string>
    <string name="welcome_facebook_error_msg">Ops, ocorreu um erro ao entrar com o Facebook =(</string>
    <string name="welcome_continue_with_email_text">Continuar com email</string>

    <string name="item_sale_sponsored_label">Patrocinado</string>
    <string name="item_sale_mine_label">Sua promo</string>
    <string name="item_sale_dislike_sale_image_content_description">imageSaleDislike</string>
    <string name="item_sale_like_sale_image_content_description">imageSaleLike</string>
    <string name="item_sale_user_avatar_image_content_description">imageUserAvatar</string>
    <string name="item_sale_image_sale_image_content_description">imageSale</string>
    <string name="item_sale_user_options_image_content_description">imageUserOptions</string>
    <string name="item_sale_price_formatted">R$ %.2f</string>

    <string name="settings_toolbar_title">Configurações</string>
    <string name="settings_notification_label">Notificações</string>
    <string name="settings_its_cheap_label">Está Barato</string>
    <string name="settings_its_expensive_label">Está Caro</string>
    <string name="settings_comments_label">Comentários</string>
    <string name="settings_complaints_label">Denúncias</string>
    <string name="settings_blocked_users_label">Usuários bloqueados</string>
    <string name="settings_blocked_users_right_arrow_image_content_description">settingsBlockedUsersArrowImageView</string>

    <string name="profile_edit_label">Editar perfil</string>
    <string name="profile_my_posts_label">Minhas publicações</string>
    <string name="profile_message">Publique sua primeira oferta acessando a opção “Enviar” abaixo.</string>
    <string name="profile_access_data_label">Dados de acesso</string>
    <string name="profile_current_password_hint">Senha atual</string>
    <string name="profile_new_password_hint">Digite Nova senha</string>
    <string name="profile_confirm_new_password_hint">Confirme a nova senha</string>
    <string name="profile_change_password_label"><u>Alterar senha</u></string>
    <string name="profile_password_not_match">As senhas não correspondem</string>
    <string name="profile_data_updated_success">dados atualizados com sucesso =)</string>
    <string name="profile_facebook_connect">Conectar com Facebook</string>
    <string name="profile_facebook_disconnect">Facebook Conectado</string>
    <string name="profile_wrong_password">Senha inválida</string>

    <string name="retrieve_password_text_input_label">Recupere sua senha</string>
    <string name="retrieve_password_text_input_hint">Confirmar e-mail cadastrado</string>
    <string name="retrieve_password_text_button">Enviar nova senha</string>
    <string name="retrieve_password_text_confirm_action">Verifique seu e-mail e insira\nsua nova senha abaixo</string>

    <string name="main_brand_logo_image_view_content_description">mainBrandImageView</string>

    <string name="sales_fragment_range_filter_text_formatted">%2dkm</string>
    <string name="sales_fragment_search_label">Você buscou por: </string>
    <string name="sales_fragment_search_query_formatted">""\"%s"\""</string>
    <string name="sales_fragment_search_clen_label">Limpar</string>
    <string name="action_search">Search</string>

    <string name="item_sale_user_options_report_sale">Denunciar oferta</string>
    <string name="item_sale_user_options_block_user">Bloquear usuário</string>

    <string name="menu_settings">Configurações</string>
    <string name="menu_search">Buscar</string>

    <string name="ratings_order_menu_option_newest">Mais recentes</string>
    <string name="ratings_order_menu_option_cheaper">Mais baratas</string>
    <string name="ratings_order_menu_option_expensive">Mais caras</string>

    <string name="post_info_product_name_hint">Nome do produto</string>
    <string name="post_into_title">Sobre a oferta</string>

    <string name="view_choose_photo_title">Escolha</string>
    <string name="view_choose_photo_camera">Câmera</string>
    <string name="view_choose_photo_gallery">Galeria</string>
    <string name="view_choose_photo_cancel">CANCELAR</string>

    <string name="post_info_location_hint">Estabelecimento</string>
    <string name="search_place_hint">Procurar local</string>
    <string name="main_send_success_msg">Publicação realizada!</string>

    <string name="sale_detail_price_label">Valor promocional</string>
    <string name="sale_detail_product_name_label">Nome do produto</string>
    <string name="sale_detail_place_name_label">Estabelecimento</string>
    <string name="sale_detail_opinion_label">Deixe sua opinião</string>
    <string name="sale_detail_comment_label">Faça seu comentário</string>
    <string name="sale_detail_comment_layout_label">Comentários</string>
    <string name="sale_detail_comment_comment_input_hint">Faça seu comentário</string>
    <string name="sale_detail_back_arrow_image_view_content_description">saleDetailActivityBackArrowImageView</string>
    <string name="sale_detail_favorite_image_view_content_description">saleDetailActivityFavoriteImageView</string>
    <string name="sale_detail_comment_image_view_content_description">saleDetailActivityCommentImageView</string>
    <string name="sale_detail_send_comment_image_view_content_description">saleDetailActivitySendCommentButton</string>
    <string name="sale_detail_ic_sale_detail_right_arrow_content_description">saleDetailActivitySalePlaceValueArrow</string>
    <string name="sale_detail_price_formatted">R$ %</string>
    <string name="sale_detail_edit_sale_option">Editar</string>

    <string name="send_sale_initial_value">R$0,00</string>
    <string name="send_sale_save">Salvar</string>
    <string name="send_sale_formatted_place">%s - %s</string>

    <string name="item_sale_comment_menu_block_user">Bloquear usuário</string>
    <string name="item_sale_comment_menu_delete_comment">Excluir comentário</string>

    <string name="item_blocked_user_unblock">Desbloquear</string>

    <string name="blocked_users_activity_toolbar_title">Usuários bloqueados</string>
    <string name="blocked_users_activity_no_content">Não existem usuários bloqueados</string>
</resources>
