<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_40_dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/choosePhotoTitleTextView"
        style="@style/TextAppearance.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20_dp"
        android:layout_marginStart="@dimen/margin_20_dp"
        android:layout_marginTop="@dimen/margin_40_dp"
        android:text="@string/view_choose_photo_title"
        android:textSize="@dimen/text_size_22_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/choosePhotoCamContainerLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10_dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin_20_dp"
        app:layout_constraintStart_toStartOf="@+id/choosePhotoTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/choosePhotoTitleTextView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_camera" />

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10_dp"
            android:layout_marginStart="@dimen/margin_10_dp"
            android:text="@string/view_choose_photo_camera" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/choosePhotoGalleryContainerLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:orientation="horizontal"
        android:padding="@dimen/margin_20_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/choosePhotoCamContainerLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/choosePhotoTitleTextView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_gallery" />

        <TextView
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10_dp"
            android:layout_marginStart="@dimen/margin_10_dp"
            android:text="@string/view_choose_photo_gallery" />

    </LinearLayout>

    <TextView
        android:id="@+id/choosePhotoCancelTextView"
        style="@style/TextAppearance.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_choose_photo_cancel"
        android:textSize="@dimen/text_size_12_sp"
        android:layout_marginTop="@dimen/margin_20_dp"
        app:layout_constraintEnd_toEndOf="@+id/choosePhotoGalleryContainerLinearLayout"
        app:layout_constraintTop_toBottomOf="@+id/choosePhotoGalleryContainerLinearLayout" />


</android.support.constraint.ConstraintLayout>