<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/settingsAppBarLayout"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/settingsNotificationLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:text="@string/settings_notification_label"
        android:textAppearance="@style/TextAppearance.Bold"
        android:textColor="@color/gray_737373"
        android:textSize="@dimen/text_size_15_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsAppBarLayout" />

    <TextView
        android:id="@+id/settingsItsCheapLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:gravity="center_vertical"
        android:text="@string/settings_its_cheap_label"
        android:textAppearance="@style/TextAppearance.Regular"
        android:textColor="@color/black_202020"
        android:textSize="@dimen/text_size_15_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsNotificationLabelTextView" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settingsItsCheapSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:layout_marginRight="@dimen/margin_25_dp"
        android:background="@null"
        android:button="@drawable/selector_settings_switch"
        android:gravity="center_vertical"
        android:thumb="@null"
        app:layout_constraintBottom_toBottomOf="@id/settingsItsCheapLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:track="@null" />

    <TextView
        android:id="@+id/settingsItsExpensiveLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:gravity="center_vertical"
        android:text="@string/settings_its_expensive_label"
        android:textAppearance="@style/TextAppearance.Regular"
        android:textColor="@color/black_202020"
        android:textSize="@dimen/text_size_15_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsItsCheapLabelTextView" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settingsItsExpensiveSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:layout_marginRight="@dimen/margin_25_dp"
        android:background="@null"
        android:button="@drawable/selector_settings_switch"
        android:gravity="center_vertical"
        android:thumb="@null"
        app:layout_constraintBottom_toBottomOf="@id/settingsItsExpensiveLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:track="@null"
        tools:checked="true" />

    <TextView
        android:id="@+id/settingsCommentsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:gravity="center_vertical"
        android:text="@string/settings_comments_label"
        android:textAppearance="@style/TextAppearance.Regular"
        android:textColor="@color/black_202020"
        android:textSize="@dimen/text_size_15_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsItsExpensiveLabelTextView" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/settingsCommentsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_25_dp"
        android:layout_marginRight="@dimen/margin_25_dp"
        android:background="@null"
        android:button="@drawable/selector_settings_switch"
        android:gravity="center_vertical"
        android:thumb="@null"
        app:layout_constraintBottom_toBottomOf="@id/settingsCommentsLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:track="@null"
        tools:checked="false" />

    <TextView
        android:id="@+id/settingsComplaintsLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_40_dp"
        android:text="@string/settings_complaints_label"
        android:textAppearance="@style/TextAppearance.Bold"
        android:textColor="@color/gray_737373"
        android:textSize="@dimen/text_size_15_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsCommentsLabelTextView" />

    <RelativeLayout
        android:id="@+id/settingsBlockedUsersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:background="@drawable/selector_settings_blocked_users_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsComplaintsLabelTextView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_40_dp"
            android:layout_marginStart="@dimen/margin_40_dp"
            android:paddingBottom="@dimen/margin_15_dp"
            android:paddingTop="@dimen/margin_15_dp"
            android:text="@string/settings_blocked_users_label"
            android:textAppearance="@style/TextAppearance.Regular"
            android:textColor="@color/gray_4A4A4A"
            android:textSize="@dimen/text_size_15_sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/settingsBlockedUsersArrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_30_dp"
            android:layout_marginRight="@dimen/margin_30_dp"
            android:contentDescription="@string/settings_blocked_users_right_arrow_image_content_description"
            app:srcCompat="@drawable/ic_settings_right_arrow" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
