<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/view_header_progress"
        layout="@layout/view_header_progress" />

    <include
        android:id="@+id/registerComplementAppBarLayout"
        layout="@layout/view_custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_header_progress" />

    <TextView
        android:id="@+id/registerComplementTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:text="@string/register_complement_title_label"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_24_sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerComplementAppBarLayout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerComplementNameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:paddingBottom="5dp"
        android:theme="@style/CustomEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerComplementTitleTextView">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerComplementNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_complement_name_hint"
            android:inputType="textPersonName"
            android:paddingBottom="@dimen/margin_15_dp"
            android:textColor="@color/black_202020"
            android:textSize="@dimen/text_size_16_sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerComplementBirthdayTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:paddingBottom="5dp"
        android:theme="@style/CustomEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerComplementNameTextInput">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerComplementBirthdayEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:editable="false"
            android:hint="@string/register_complement_birthday_hint"
            android:inputType="date"
            android:paddingBottom="@dimen/margin_15_dp"
            android:textColor="@color/black_202020"
            android:textSize="@dimen/text_size_16_sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/registerComplementPhoneTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_40_dp"
        android:layout_marginStart="@dimen/margin_40_dp"
        android:layout_marginTop="@dimen/margin_20_dp"
        android:paddingBottom="5dp"
        android:theme="@style/CustomEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerComplementBirthdayTextInput">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/registerComplementPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_complement_phone_hint"
            android:inputType="phone"
            android:paddingBottom="@dimen/margin_15_dp"
            android:textColor="@color/black_202020"
            android:textSize="@dimen/text_size_16_sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/registerComplementContinueButton"
        style="@style/CustomButtonTextMedium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50_dp"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_30_dp"
        android:layout_marginStart="@dimen/margin_30_dp"
        android:layout_marginTop="@dimen/margin_35_dp"
        android:background="@drawable/button_accent_selector"
        android:shadowColor="@color/buttonShadow"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:text="@string/general_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20_sp"
        app:layout_constraintTop_toBottomOf="@id/registerComplementPhoneTextInput" />

</android.support.constraint.ConstraintLayout>