<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    >

  <include
      layout="@layout/view_header_progress"
      android:id="@+id/view_header_progress"
      />

  <include
      layout="@layout/layout_toolbar"
      android:id="@+id/appBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/view_header_progress"
      />

  <TextView
      android:id="@+id/textInputPasswordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/margin_40_dp"
      android:layout_marginStart="@dimen/margin_40_dp"
      android:layout_marginTop="@dimen/margin_15_dp"
      android:text="@string/register_login_password_title_label"
      android:textAppearance="@style/TextAppearance.Title"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="@dimen/text_size_24_sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/appBarLayout"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/textLoginEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_40_dp"
      android:layout_marginStart="@dimen/margin_40_dp"
      android:layout_marginTop="@dimen/margin_30_dp"
      android:theme="@style/CustomEditTextDisable"
      app:hintAnimationEnabled="false"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textInputPasswordLabel"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/gray_666666"
        android:textSize="@dimen/text_size_16_sp"
        android:textStyle="bold"
        />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/textLoginPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/margin_40_dp"
      android:layout_marginStart="@dimen/margin_40_dp"
      android:layout_marginTop="@dimen/margin_20_dp"
      android:paddingBottom="5dp"
      android:theme="@style/CustomEditText"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textLoginEmail"
      app:passwordToggleEnabled="true"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/margin_15_dp"
        android:textColor="@color/black_202020"
        android:textSize="@dimen/text_size_16_sp"
        />

  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/textButtonForgetPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_20_dp"
      android:layout_marginLeft="@dimen/margin_40_dp"
      android:layout_marginStart="@dimen/margin_40_dp"
      android:layout_marginTop="@dimen/margin_35_dp"
      android:text="@string/register_forget_password"
      android:textAppearance="@style/TextAppearance.Medium"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/text_size_16_sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textLoginPassword"
      />

  <Button
      android:id="@+id/buttonConfirmLogin"
      android:layout_width="match_parent"
      android:layout_height="@dimen/margin_50_dp"
      android:layout_gravity="center"
      android:layout_marginEnd="@dimen/margin_30_dp"
      android:layout_marginStart="@dimen/margin_30_dp"
      android:layout_marginTop="@dimen/margin_35_dp"
      android:background="@drawable/button_login_selector"
      android:shadowColor="@color/buttonShadow"
      android:shadowDx="2"
      android:shadowDy="2"
      android:shadowRadius="2"
      android:text="@string/register_confirm_login"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_20_sp"
      app:layout_constraintTop_toBottomOf="@id/textButtonForgetPassword"
      style="@style/CustomButtonTextMedium"
      />

</android.support.constraint.ConstraintLayout>
